[+] Upgraded to Angular 20 and Nx 21

--- a/apps/money-tracker-ui/src/app/app.component.html
+++ b/apps/money-tracker-ui/src/app/app.component.html
@@ -1,12 +1,14 @@
-<app-header
-  *ngIf="userProfile"
-  [title]="title"
-  [userProfile]="userProfile"
-  [isLoggedIn]="isLoggedIn"
-></app-header>
+@if (userProfile) {
+  <app-header
+    [title]="title"
+    [userProfile]="userProfile"
+    [isLoggedIn]="isLoggedIn"
+  ></app-header>
+}
 
-<app-header
-  *ngIf="!userProfile"
-  [title]="title"
-  [isLoggedIn]="isLoggedIn"
-></app-header>
+@if (!userProfile) {
+  <app-header
+    [title]="title"
+    [isLoggedIn]="isLoggedIn"
+  ></app-header>
+}
