--- a/apps/money-tracker-ui/src/app/organizations/organization-group/organization-group.component.html
+++ b/apps/money-tracker-ui/src/app/organizations/organization-group/organization-group.component.html
@@ -1,36 +1,38 @@
-<app-breadcrumbs *ngIf="entity" [path]="path"></app-breadcrumbs>
-<div *ngIf="entity">
-  <div class="back-area">
-    <div class="jumbotron">
-      <h2 style="margin: 10px"></h2>
-      <h2>
-        {{ entity ? entity.name : '' }}
-      </h2>
-      <span style="max-height: 350px; margin: 10px; overflow: auto">
-        {{ entity ? entity.description : '' }}
-      </span>
+@if (entity) {
+  <app-breadcrumbs [path]="path"></app-breadcrumbs>
+}
+@if (entity) {
+  <div>
+    <div class="back-area">
+      <div class="jumbotron">
+        <h2 style="margin: 10px"></h2>
+        <h2>
+          {{ entity ? entity.name : '' }}
+        </h2>
+        <span style="max-height: 350px; margin: 10px; overflow: auto">
+          {{ entity ? entity.description : '' }}
+        </span>
+      </div>
     </div>
-  </div>
-
-  <app-entity-list
+    <app-entity-list
     [searchRequest]="{
       queryArguments: getQueryArguments(),
       queryName: 'recursiveByParentId'
     }"
-    (loading$)="setLoading($event)"
-    (entities$)="setEntities($event)"
-    [sort]="getSort()"
-  ></app-entity-list>
-
-  <app-organization-group-organizations
-    *ngIf="!(children && children.length > 0)"
-    [id]="id"
-  >
-  </app-organization-group-organizations>
-
-  <div>
-    <ya-map [center]="[55.751952, 37.600739]" [zoom]="12">
-      <ya-placemark [geometry]="[55.751952, 37.600739]"></ya-placemark>
-    </ya-map>
+      (loading$)="setLoading($event)"
+      (entities$)="setEntities($event)"
+      [sort]="getSort()"
+    ></app-entity-list>
+    @if (!(children && children.length > 0)) {
+      <app-organization-group-organizations
+        [id]="id"
+        >
+      </app-organization-group-organizations>
+    }
+    <div>
+      <ya-map [center]="[55.751952, 37.600739]" [zoom]="12">
+        <ya-placemark [geometry]="[55.751952, 37.600739]"></ya-placemark>
+      </ya-map>
+    </div>
   </div>
-</div>
+}
