--- a/libs/shared-components/src/lib/components/entity-list-filtered/entity-list-filtered.component.html
+++ b/libs/shared-components/src/lib/components/entity-list-filtered/entity-list-filtered.component.html
@@ -5,10 +5,12 @@
       (selectionChange)="setFilterMode($event)"
       [formControl]="mode"
       (valueChange)="updateSearchMode($event)"
-    >
-      <mat-option *ngFor="let mode of modes | keyvalue" [value]="mode.value">
-        {{ mode.value }}
-      </mat-option>
+      >
+      @for (mode of modes | keyvalue; track mode) {
+        <mat-option [value]="mode.value">
+          {{ mode.value }}
+        </mat-option>
+      }
     </mat-select>
   </mat-form-field>
   <mat-form-field>
@@ -20,7 +22,7 @@
       [formControl]="name"
       type="text"
       placeholder="to find in name"
-    />
+      />
     <mat-hint>Start typing, Enter to search</mat-hint>
   </mat-form-field>
 </ng-template>
