--- a/apps/money-tracker-ui/src/app/accounts/exchange/exchange.component.html
+++ b/apps/money-tracker-ui/src/app/accounts/exchange/exchange.component.html
@@ -1,30 +1,32 @@
-<h4 *ngIf="this.report" class="header" [hidden]="loading">
-  <span
-    ><b>Sold:</b>
-    {{
+@if (this.report) {
+  <h4 class="header" [hidden]="loading">
+    <span
+      ><b>Sold:</b>
+      {{
       (this.report.sourceAmount ? this.report.sourceAmount : 0)
-        | currency : this.sourceCurrency.code
-    }},
-  </span>
-  <span
-    ><b>Bought:</b>
-    {{
+      | currency : this.sourceCurrency.code
+      }},
+    </span>
+    <span
+      ><b>Bought:</b>
+      {{
       (this.report.destAmount ? this.report.destAmount : 0)
-        | currency : this.destCurrency.code
-    }},
-  </span>
-  <span
-    ><b>Average:</b>
-    {{
+      | currency : this.destCurrency.code
+      }},
+    </span>
+    <span
+      ><b>Average:</b>
+      {{
       (this.report.avgRate ? 1 / this.report.avgRate : 0) | number : '1.6-8'
-    }}
-    ,
-  </span>
-  <span
-    ><b>Current:</b>
-    {{ (this.report.curRate ? 1 / this.report.curRate : 0) | number : '1.6-8' }}
-  </span>
-</h4>
+      }}
+      ,
+    </span>
+    <span
+      ><b>Current:</b>
+      {{ (this.report.curRate ? 1 / this.report.curRate : 0) | number : '1.6-8' }}
+    </span>
+  </h4>
+}
 
 <h4 class="header" [hidden]="!loading">
   <span><b>Loading...</b></span>
@@ -50,16 +52,17 @@
   (currency$)="updatesDestCurrency($event)"
 ></app-money-type-selector>
 
-<div
-  class="rubber timeHeader"
-  *ngIf="this.report && this.report.delta"
+@if (this.report && this.report.delta) {
+  <div
+    class="rubber timeHeader"
   [ngClass]="{
     positive: this.report.delta > 0,
     negative: this.report.delta < 0
   }"
->
-  {{ this.report.delta | currency : this.destCurrency.code }}
-</div>
+    >
+    {{ this.report.delta | currency : this.destCurrency.code }}
+  </div>
+}
 
 <ng-template #exchangeTable let-entities="entities">
   <table mat-table [dataSource]="entities">
@@ -73,95 +76,105 @@
     <ng-container matColumnDef="from">
       <th mat-header-cell *matHeaderCellDef>From</th>
       <td mat-cell *matCellDef="let element">
-        <a
-          *ngIf="element.source && element.sourceLink"
-          routerLink="{{ element.sourceLink }}"
-        >
-          {{ element.source.name }}
-        </a>
+        @if (element.source && element.sourceLink) {
+          <a
+            routerLink="{{ element.sourceLink }}"
+            >
+            {{ element.source.name }}
+          </a>
+        }
 
-        <div *ngIf="element.source && !element.sourceLink">
-          {{ element.source.name }}
-        </div>
+        @if (element.source && !element.sourceLink) {
+          <div>
+            {{ element.source.name }}
+          </div>
+        }
       </td>
     </ng-container>
 
     <ng-container matColumnDef="to">
       <th mat-header-cell *matHeaderCellDef>To</th>
       <td mat-cell *matCellDef="let element">
-        <a
-          *ngIf="element.dest && element.destLink"
-          routerLink="{{ element.destLink }}"
-        >
-          {{ element.dest.name }}</a
-        >
+        @if (element.dest && element.destLink) {
+          <a
+            routerLink="{{ element.destLink }}"
+            >
+            {{ element.dest.name }}</a
+            >
+          }
 
-        <div *ngIf="element.dest && !element.destLink">
-          {{ element.dest.name }}
-        </div>
-      </td>
-    </ng-container>
+          @if (element.dest && !element.destLink) {
+            <div>
+              {{ element.dest.name }}
+            </div>
+          }
+        </td>
+      </ng-container>
 
-    <ng-container matColumnDef="sourceamount">
-      <th mat-header-cell *matHeaderCellDef>Source Amount</th>
-      <td mat-cell *matCellDef="let element">
-        {{ element.sourceamount | currency : sourceCurrency.code }}
-      </td>
-    </ng-container>
+      <ng-container matColumnDef="sourceamount">
+        <th mat-header-cell *matHeaderCellDef>Source Amount</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.sourceamount | currency : sourceCurrency.code }}
+        </td>
+      </ng-container>
 
-    <ng-container matColumnDef="destamount">
-      <th mat-header-cell *matHeaderCellDef>Dest Amount</th>
-      <td mat-cell *matCellDef="let element">
-        {{ element.destamount | currency : destCurrency.code }}
-      </td>
-    </ng-container>
+      <ng-container matColumnDef="destamount">
+        <th mat-header-cell *matHeaderCellDef>Dest Amount</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.destamount | currency : destCurrency.code }}
+        </td>
+      </ng-container>
 
-    <ng-container matColumnDef="rate">
-      <th mat-header-cell *matHeaderCellDef>Rate</th>
-      <td mat-cell *matCellDef="let element">
-        {{ element.rate | number : '1.6-8' }}
-      </td>
-    </ng-container>
+      <ng-container matColumnDef="rate">
+        <th mat-header-cell *matHeaderCellDef>Rate</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.rate | number : '1.6-8' }}
+        </td>
+      </ng-container>
 
-    <ng-container *ngIf="this.report" matColumnDef="ratedelta">
-      <th mat-header-cell *matHeaderCellDef>Rate Delta</th>
-      <td mat-cell *matCellDef="let element">
-        {{ element.rate - this.report.curRate | number : '1.6-8' }}
-      </td>
-    </ng-container>
+      @if (this.report) {
+        <ng-container matColumnDef="ratedelta">
+          <th mat-header-cell *matHeaderCellDef>Rate Delta</th>
+          <td mat-cell *matCellDef="let element">
+            {{ element.rate - this.report.curRate | number : '1.6-8' }}
+          </td>
+        </ng-container>
+      }
 
-    <ng-container *ngIf="this.report" matColumnDef="delta">
-      <th mat-header-cell *matHeaderCellDef>Delta</th>
-      <td
-        mat-cell
-        *matCellDef="let element"
+      @if (this.report) {
+        <ng-container matColumnDef="delta">
+          <th mat-header-cell *matHeaderCellDef>Delta</th>
+          <td
+            mat-cell
+            *matCellDef="let element"
         [ngClass]="{
           positive:
             element.sourceamount * (element.rate - this.report.curRate) > 0,
           negative:
             element.sourceamount * (element.rate - this.report.curRate) < 0
         }"
-      >
-        {{
-          element.sourceamount * (element.rate - this.report.curRate)
+            >
+            {{
+            element.sourceamount * (element.rate - this.report.curRate)
             | currency : destCurrency.code
-        }}
-      </td>
-    </ng-container>
+            }}
+          </td>
+        </ng-container>
+      }
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-  </table>
-</ng-template>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    </table>
+  </ng-template>
 
-<app-entity-list
-  [resultItemTemplate]="exchangeTable"
-  [table]="true"
-  [loadOnInit]="false"
+  <app-entity-list
+    [resultItemTemplate]="exchangeTable"
+    [table]="true"
+    [loadOnInit]="false"
   [searchRequest]="{
     queryArguments: getQueryArguments(),
     queryName: 'events'
   }"
-  [sort]="getSort()"
-  (loading$)="setLoading($event)"
-></app-entity-list>
+    [sort]="getSort()"
+    (loading$)="setLoading($event)"
+  ></app-entity-list>
