--- a/apps/money-tracker-ui/src/app/commodities/commodity/commodity.component.html
+++ b/apps/money-tracker-ui/src/app/commodities/commodity/commodity.component.html
@@ -1,23 +1,27 @@
-<app-breadcrumbs *ngIf="entity" [path]="path"></app-breadcrumbs>
-<div *ngIf="entity">
-  <div class="jumbotron">
-    <div>
-      <h2 style="margin: 10px"></h2>
-      <h2>
-        {{ entity ? entity.name : 'Not loaded' }}
-      </h2>
-    </div>
-    <div>
-      Average Price: {{ averagePrice | currency : defaultMoneyType?.code }} /
-      {{ defaultUnit }}
-    </div>
-    <div>Quantity: {{ totalQty }} {{ defaultUnit }}</div>
-    <div>Total: {{ totalSum | currency : defaultMoneyType?.code }}</div>
-    <div style="max-height: 350px; margin: 10px; overflow: auto">
-      {{ entity ? entity.description : '' }}
+@if (entity) {
+  <app-breadcrumbs [path]="path"></app-breadcrumbs>
+}
+@if (entity) {
+  <div>
+    <div class="jumbotron">
+      <div>
+        <h2 style="margin: 10px"></h2>
+        <h2>
+          {{ entity ? entity.name : 'Not loaded' }}
+        </h2>
+      </div>
+      <div>
+        Average Price: {{ averagePrice | currency : defaultMoneyType?.code }} /
+        {{ defaultUnit }}
+      </div>
+      <div>Quantity: {{ totalQty }} {{ defaultUnit }}</div>
+      <div>Total: {{ totalSum | currency : defaultMoneyType?.code }}</div>
+      <div style="max-height: 350px; margin: 10px; overflow: auto">
+        {{ entity ? entity.description : '' }}
+      </div>
     </div>
   </div>
-</div>
+}
 
 <div class="row">
   <div class="col-12">
@@ -52,31 +56,34 @@
     <ng-container matColumnDef="organizationname">
       <th mat-header-cell *matHeaderCellDef>Organization</th>
       <td mat-cell *matCellDef="let element">
-        <a
-          *ngIf="element.tradeplace && element.tradeplaceLink"
-          routerLink="{{ element.tradeplaceLink }}"
-        >
-          {{ element.tradeplace.name }}</a
-        >
+        @if (element.tradeplace && element.tradeplaceLink) {
+          <a
+            routerLink="{{ element.tradeplaceLink }}"
+            >
+            {{ element.tradeplace.name }}</a
+            >
+          }
 
-        <div *ngIf="element.tradeplace && !element.tradeplaceLink">
-          {{ element.tradeplace.name }}
-        </div>
-      </td>
-    </ng-container>
+          @if (element.tradeplace && !element.tradeplaceLink) {
+            <div>
+              {{ element.tradeplace.name }}
+            </div>
+          }
+        </td>
+      </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-  </table>
-</ng-template>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    </table>
+  </ng-template>
 
-<app-entity-list
-  [resultItemTemplate]="expensesTable"
-  [table]="true"
+  <app-entity-list
+    [resultItemTemplate]="expensesTable"
+    [table]="true"
   [searchRequest]="{
     queryArguments: getQueryArguments(),
     queryName: 'commodity'
   }"
-  (loading$)="setLoading($event)"
-  (entities$)="setEntities($event)"
-></app-entity-list>
+    (loading$)="setLoading($event)"
+    (entities$)="setEntities($event)"
+  ></app-entity-list>
