--- a/apps/money-tracker-ui/src/app/expenses/expences-list/expenses-list.component.html
+++ b/apps/money-tracker-ui/src/app/expenses/expences-list/expenses-list.component.html
@@ -5,19 +5,19 @@
       [rangePicker]="$any(rangePicker)"
       [comparisonStart]="getStartDate()"
       [comparisonEnd]="getEndDate()"
-    >
+      >
       <input
         matStartDate
         placeholder="Start date"
         (dateChange)="setStartDate($event)"
         [formControl]="startDate"
-      />
+        />
       <input
         matEndDate
         placeholder="End date"
         (dateChange)="setEndDate($event)"
         [formControl]="endDate"
-      />
+        />
     </mat-date-range-input>
     <mat-hint>MM/DD/YYYY – MM/DD/YYYY</mat-hint>
     <mat-datepicker-toggle
@@ -43,7 +43,7 @@
     matSortDirection="desc"
     (matSortChange)="entityList.setSort($event)"
     [dataSource]="entities"
-  >
+    >
     <ng-container matColumnDef="transferdate">
       <th mat-header-cell mat-sort-header="transferdate" *matHeaderCellDef>
         Transfer Date
@@ -56,64 +56,70 @@
     <ng-container matColumnDef="commodity.name">
       <th mat-header-cell *matHeaderCellDef>Name</th>
       <td mat-cell *matCellDef="let element">
-        <a
-          *ngIf="element.commodity && element.commodityLink"
-          routerLink="{{ element.commodityLink }}"
-        >
-          {{ element.commodity.name }}</a
-        >
+        @if (element.commodity && element.commodityLink) {
+          <a
+            routerLink="{{ element.commodityLink }}"
+            >
+            {{ element.commodity.name }}</a
+            >
+          }
 
-        <div *ngIf="element.commodity && !element.commodityLink">
-          {{ element.commodity.name }}
-        </div>
-      </td>
-    </ng-container>
+          @if (element.commodity && !element.commodityLink) {
+            <div>
+              {{ element.commodity.name }}
+            </div>
+          }
+        </td>
+      </ng-container>
 
-    <ng-container matColumnDef="price">
-      <th mat-header-cell mat-sort-header="price" *matHeaderCellDef>Price</th>
-      <td mat-cell *matCellDef="let element">
-        {{ element.price | currency : element.expense.moneyType?.code }}
-      </td>
-    </ng-container>
+      <ng-container matColumnDef="price">
+        <th mat-header-cell mat-sort-header="price" *matHeaderCellDef>Price</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.price | currency : element.expense.moneyType?.code }}
+        </td>
+      </ng-container>
 
-    <ng-container matColumnDef="qty">
-      <th mat-header-cell *matHeaderCellDef>Qty</th>
-      <td mat-cell *matCellDef="let element">
-        {{ element.qty | number : '1.0-2' }}
-        {{ element.commodity?.unittype?.shortName }}
-      </td>
-    </ng-container>
+      <ng-container matColumnDef="qty">
+        <th mat-header-cell *matHeaderCellDef>Qty</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.qty | number : '1.0-2' }}
+          {{ element.commodity?.unittype?.shortName }}
+        </td>
+      </ng-container>
 
-    <ng-container matColumnDef="organizationname">
-      <th mat-header-cell *matHeaderCellDef>Organization</th>
-      <td mat-cell *matCellDef="let element">
-        <a
-          *ngIf="element.tradeplace && element.tradeplaceLink"
-          routerLink="{{ element.tradeplaceLink }}"
-        >
-          {{ element.tradeplace.name }}</a
-        >
+      <ng-container matColumnDef="organizationname">
+        <th mat-header-cell *matHeaderCellDef>Organization</th>
+        <td mat-cell *matCellDef="let element">
+          @if (element.tradeplace && element.tradeplaceLink) {
+            <a
+              routerLink="{{ element.tradeplaceLink }}"
+              >
+              {{ element.tradeplace.name }}</a
+              >
+            }
 
-        <div *ngIf="element.tradeplace && !element.tradeplaceLink">
-          {{ element.tradeplace.name }}
-        </div>
-      </td>
-    </ng-container>
+            @if (element.tradeplace && !element.tradeplaceLink) {
+              <div>
+                {{ element.tradeplace.name }}
+              </div>
+            }
+          </td>
+        </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-  </table>
-</ng-template>
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+      </table>
+    </ng-template>
 
-<app-entity-list
-  [resultItemTemplate]="expensesTable"
-  [table]="true"
+    <app-entity-list
+      [resultItemTemplate]="expensesTable"
+      [table]="true"
   [searchRequest]="{
     queryArguments: {},
     queryName: getQueryName()
   }"
-  [sort]="getSort()"
-  [filterTemplate]="filter"
-  (filter$)="setFilter($event)"
->
-</app-entity-list>
+      [sort]="getSort()"
+      [filterTemplate]="filter"
+      (filter$)="setFilter($event)"
+      >
+    </app-entity-list>
