--- a/apps/money-tracker-ui/src/app/expenses/last-commodities-list/last-commodities-list.component.html
+++ b/apps/money-tracker-ui/src/app/expenses/last-commodities-list/last-commodities-list.component.html
@@ -17,53 +17,59 @@
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef>Name</th>
       <td mat-cell *matCellDef="let element">
-        <a
-          *ngIf="element.commodity && element.commodityLink"
-          routerLink="{{ element.commodityLink }}"
-        >
-          {{ element.commodity.name }}</a
-        >
+        @if (element.commodity && element.commodityLink) {
+          <a
+            routerLink="{{ element.commodityLink }}"
+            >
+            {{ element.commodity.name }}</a
+            >
+          }
 
-        <div *ngIf="element.commodity && !element.commodityLink">
-          {{ element.commodity.name }}
-        </div>
-      </td>
-    </ng-container>
+          @if (element.commodity && !element.commodityLink) {
+            <div>
+              {{ element.commodity.name }}
+            </div>
+          }
+        </td>
+      </ng-container>
 
-    <ng-container matColumnDef="price">
-      <th mat-header-cell *matHeaderCellDef>Price</th>
-      <td mat-cell *matCellDef="let element">
-        {{ element.price | currency : element.currency }}
-      </td>
-    </ng-container>
+      <ng-container matColumnDef="price">
+        <th mat-header-cell *matHeaderCellDef>Price</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.price | currency : element.currency }}
+        </td>
+      </ng-container>
 
-    <ng-container matColumnDef="qty">
-      <th mat-header-cell *matHeaderCellDef>Qty</th>
-      <td mat-cell *matCellDef="let element">
-        {{ element.qty | number : '1.0-2' }} {{ element.unit }}
-      </td>
-    </ng-container>
+      <ng-container matColumnDef="qty">
+        <th mat-header-cell *matHeaderCellDef>Qty</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.qty | number : '1.0-2' }} {{ element.unit }}
+        </td>
+      </ng-container>
 
-    <ng-container matColumnDef="organizationname">
-      <th mat-header-cell *matHeaderCellDef>Organization</th>
-      <td mat-cell *matCellDef="let element">
-        <a
-          *ngIf="element.organization && element.organizationLink"
-          routerLink="{{ element.organizationLink }}"
-        >
-          {{ element.organization.name }}</a
-        >
+      <ng-container matColumnDef="organizationname">
+        <th mat-header-cell *matHeaderCellDef>Organization</th>
+        <td mat-cell *matCellDef="let element">
+          @if (element.organization && element.organizationLink) {
+            <a
+              routerLink="{{ element.organizationLink }}"
+              >
+              {{ element.organization.name }}</a
+              >
+            }
 
-        <div *ngIf="element.organization && !element.organizationLink">
-          {{ element.organization.name }}
-        </div>
-      </td>
-    </ng-container>
+            @if (element.organization && !element.organizationLink) {
+              <div>
+                {{ element.organization.name }}
+              </div>
+            }
+          </td>
+        </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-  </table>
-</ng-template>
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+      </table>
+    </ng-template>
 
-<app-search [resultItemTemplate]="lastExpensesTable" [table]="true">
-</app-search>
+    <app-search [resultItemTemplate]="lastExpensesTable" [table]="true">
+    </app-search>
