--- a/apps/money-tracker-ui/src/app/organizations/organization/organization.component.html
+++ b/apps/money-tracker-ui/src/app/organizations/organization/organization.component.html
@@ -1,24 +1,27 @@
-<app-breadcrumbs *ngIf="entity" [path]="path"></app-breadcrumbs>
-<div *ngIf="entity">
-  <div class="jumbotron">
-    <div>
-      <h2 style="margin: 10px"></h2>
-      <h2>
-        {{ entity ? entity.name : 'Not loaded' }}
-      </h2>
-    </div>
-    <div>
-      Total: {{ totalSum | currency : 'RUB' }}
-      <!-- hard coded currency, as well as in the query -->
-    </div>
-  </div>
-
+@if (entity) {
+  <app-breadcrumbs [path]="path"></app-breadcrumbs>
+}
+@if (entity) {
   <div>
-    <ya-map [center]="[55.751952, 37.600739]" [zoom]="12">
-      <ya-placemark [geometry]="[55.751952, 37.600739]"></ya-placemark>
-    </ya-map>
+    <div class="jumbotron">
+      <div>
+        <h2 style="margin: 10px"></h2>
+        <h2>
+          {{ entity ? entity.name : 'Not loaded' }}
+        </h2>
+      </div>
+      <div>
+        Total: {{ totalSum | currency : 'RUB' }}
+        <!-- hard coded currency, as well as in the query -->
+      </div>
+    </div>
+    <div>
+      <ya-map [center]="[55.751952, 37.600739]" [zoom]="12">
+        <ya-placemark [geometry]="[55.751952, 37.600739]"></ya-placemark>
+      </ya-map>
+    </div>
   </div>
-</div>
+}
 
 <div class="row">
   <div class="col-12">
@@ -38,46 +41,49 @@
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef>Name</th>
       <td mat-cell *matCellDef="let element">
-        <a
-          *ngIf="element.commodity && element.commodityLink"
-          routerLink="{{ element.commodityLink }}"
-        >
-          {{ element.commodity.name }}</a
-        >
+        @if (element.commodity && element.commodityLink) {
+          <a
+            routerLink="{{ element.commodityLink }}"
+            >
+            {{ element.commodity.name }}</a
+            >
+          }
 
-        <div *ngIf="element.commodity && !element.commodityLink">
-          {{ element.commodity.name }}
-        </div>
-      </td>
-    </ng-container>
+          @if (element.commodity && !element.commodityLink) {
+            <div>
+              {{ element.commodity.name }}
+            </div>
+          }
+        </td>
+      </ng-container>
 
-    <ng-container matColumnDef="price">
-      <th mat-header-cell *matHeaderCellDef>Price</th>
-      <td mat-cell *matCellDef="let element">
-        {{ element.price | currency : element.expense.moneyType?.code }}
-      </td>
-    </ng-container>
+      <ng-container matColumnDef="price">
+        <th mat-header-cell *matHeaderCellDef>Price</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.price | currency : element.expense.moneyType?.code }}
+        </td>
+      </ng-container>
 
-    <ng-container matColumnDef="qty">
-      <th mat-header-cell *matHeaderCellDef>Qty</th>
-      <td mat-cell *matCellDef="let element">
-        {{ element.qty | number : '1.0-2' }}
-        {{ element.commodity?.unittype?.shortName }}
-      </td>
-    </ng-container>
+      <ng-container matColumnDef="qty">
+        <th mat-header-cell *matHeaderCellDef>Qty</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.qty | number : '1.0-2' }}
+          {{ element.commodity?.unittype?.shortName }}
+        </td>
+      </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-  </table>
-</ng-template>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    </table>
+  </ng-template>
 
-<app-entity-list
-  [resultItemTemplate]="expensesTable"
-  [table]="true"
+  <app-entity-list
+    [resultItemTemplate]="expensesTable"
+    [table]="true"
   [searchRequest]="{
     queryArguments: getQueryArguments(),
     queryName: 'tradeplace'
   }"
-  (loading$)="setLoading($event)"
-  (entities$)="setEntities($event)"
-></app-entity-list>
+    (loading$)="setLoading($event)"
+    (entities$)="setEntities($event)"
+  ></app-entity-list>
