[+] Migration to Node 22 and Angular 21

--- a/libs/shared-components/src/lib/components/breadcrumbs/breadcrumbs.component.sass
+++ b/libs/shared-components/src/lib/components/breadcrumbs/breadcrumbs.component.sass
@@ -1,3 +1,5 @@
+@reference "tailwindcss"
+
 .breadcrumbs
   @apply flex text-gray-400 p-3 pb-0
   margin-bottom: 5px
@@ -13,4 +15,3 @@
 
 .breadcrumbs .active-ctrl:hover
   @apply text-gray-700
-
