--- a/libs/shared-components/src/lib/components/entity-list/entity-list.component.sass
+++ b/libs/shared-components/src/lib/components/entity-list/entity-list.component.sass
@@ -1,4 +1,6 @@
 
+@reference "tailwindcss"
+
 .search-results
   @apply p-3 bg-white
 
@@ -45,4 +47,3 @@
 
 .selectable-result-item
   @apply cursor-pointer hover:bg-blue-50
-
