--- a/apps/money-tracker-ui/src/app/organizations/organization-group/organization-group.component.html
+++ b/apps/money-tracker-ui/src/app/organizations/organization-group/organization-group.component.html
@@ -30,9 +30,9 @@
       </app-organization-group-organizations>
     }
     <div>
-      <ya-map [center]="[55.751952, 37.600739]" [zoom]="12">
+      <!--ya-map [center]="[55.751952, 37.600739]" [zoom]="12">
         <ya-placemark [geometry]="[55.751952, 37.600739]"></ya-placemark>
-      </ya-map>
+      </ya-map-->
     </div>
   </div>
 }
